deploy/ingress-nginx.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: example
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
      - host: myapp.local
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: myapp-service
                  port:
                    number: 8000
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
    tls:
      - hosts:
        - myapp.local
        secretName: tls
---
  apiVersion: v1
  kind: Secret
  metadata:
    name: tls
    namespace: default
  data:
    tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMVENDQWhXZ0F3SUJBZ0lVSWdtZjN5L2RXWnkzaHd4NmdqUU5RY1BQMS9zd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pqRVVNQklHQTFVRUF3d0xiWGxoY0hBdWJHOWpZV3d4RGpBTUJnTlZCQW9NQlcxNVlYQndNQjRYRFRJMQpNREl3T0RFNU1UWTBOVm9YRFRJMk1ESXdPREU1TVRZME5Wb3dKakVVTUJJR0ExVUVBd3dMYlhsaGNIQXViRzlqCllXd3hEakFNQmdOVkJBb01CVzE1WVhCd01JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0MKQVFFQXVJakVweXRUM0dlSEtudjFVOGhVQmVqUSs0NjZiUzFsUnlEUEt2NTlCUmZ5QW8vMTNDbWFGSmdxM0swcgpSRFd0c0NycFFqOHZ [...]
    tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQzRpTVNuSzFQY1o0Y3EKZS9WVHlGUUY2TkQ3anJwdExXVkhJTThxL24wRkYvSUNqL1hjS1pvVW1DcmNyU3RFTmEyd0t1bENQeThDSTNEZApaNW5xRkZTZktieWVrT1NHVko1d3QxWm9aNmQ5bXVXdzJyZ3lGS2F6S2dSVW1hS2RjdGVTYVB6UGJSWGV4Z25oCk5WNmJFdGZ1Q21JaEFKK2ZiYmFpR3Y5SkZ6MklCTHJSWVFFQWF5N2RVR251Sk9rWWcyVGRVOHZYbC81UDQwTUIKVktla3h4S1RHcW5MWlBpNFR6KzZTSEZ4SCs5WE44ajhoUXpQcERKM2RxcUNzU0JHalVNd0M4V3B3MWZqTGtUUwpvRnM4ZXllaVpRaGk [...]
  type: kubernetes.io/tls
